feat: add layout

--- a/singolo1.html
+++ b/singolo1.html
@@ -24,5 +24,81 @@
             </div>
         </div>
     </header>
+    <main>
+        <section class="slider">
+            <div class="container">
+                <div class="slider-container">
+                    <div class="arrow arrow-right">
+                        <img src="assets/img/left-arrow.png" alt="arrow">
+                    </div>
+                    <div class="image-container">
+                        <img class="image-1" src="assets/img/ver-iphone.png">
+                        <img class="image-2" src="assets/img/gor-iphone.png">
+                    </div>
+                    <div class="arrow arrow-left">
+                        <img src="assets/img/right-arrow.png" alt="arrow">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="services">
+            <div class="container">
+              <h2 class="title">Our Services</h2>
+              <p class="description1">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis,
+                non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus
+                commodo, tortor mauris condimentum nibh.</p>
+              <div class="layout">
+                <article class="service1">
+                  <img class="icon" src="./assets/img/pen.png" alt="pen">
+                  <div class="content">
+                    <h3 class="name">Custom Design</h3>
+                    <p class="description">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet,
+                      vivverra lacus ut, ultrices velit.</p>
+                  </div>
+                </article>
+                <article class="service1">
+                  <img class="icon" src="./assets/img/bulb.png" alt="bulb">
+                  <div class="content">
+                    <h3 class="name">Inovative Ideas</h3>
+                    <p class="description">Quisque luctus, quam eget molestie com-modo, lacus purus curus purus, nec
+                      rutrum tellus dolor id lorem.</p>
+                  </div>
+                </article>
+                <article class="service1">
+                  <img class="icon" src="./assets/img/heart.png" alt="heart">
+                  <div class="content">
+                    <h3 class="name">Love Is The Answer</h3>
+                    <p class="description">Nulla sed nunc et toror luctus faucibus. Morbi at aliquet turpis, et
+                      consequat felis. Quisque condimentum.</p>
+                  </div>
+                </article>
+                <article class="service1">
+                  <img class="icon" src="./assets/img/phone.png" alt="phone">
+                  <div class="content">
+                    <h3 class="name">Responsive Layout</h3>
+                    <p class="description">Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc
+                      ligula. Praesent elit leo.</p>
+                  </div>
+                </article>
+                <article class="service1">
+                  <img class="icon" src="./assets/img/bubble.png" alt="bubble">
+                  <div class="content">
+                    <h3 class="name">24/7 Support</h3>
+                    <p class="description">Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem
+                      erat. Pellentesque egestas venenatis lorem.</p>
+                  </div>
+                </article>
+                <article class="service1">
+                  <img class="icon" src="./assets/img/star.png" alt="star">
+                  <div class="content">
+                    <h3 class="name">Feel Like A Star</h3>
+                    <p class="description">Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce
+                      vitae aliquam tellus.</p>
+                  </div>
+                </article>
+              </div>
+            </div>
+          </section>
+    </main>
 </body>
 </html>
