--- a/singolo2.html
+++ b/singolo2.html
@@ -34,5 +34,51 @@
             </div>
         </div>
     </section>
+    <section class="about-us">
+        <div class="container">
+            <h1 class="about-us__title">About Us</h1>
+            <p class="about-us__subTitle">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. 
+                Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
+            </p>
+            <div class="peoples">
+                <div class="peoples__item person1">
+                    <img alt="person-1" src="assets/img/person1.png">
+                    <h2 class="person__name">Adam Jensen</h2>
+                    <p class="person__description">Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.
+                    </p>
+                    <div class="social">
+                        <div class="social__facebook social__item"></div>
+                        <div class="social__gmail social__item"></div>
+                        <div class="social__twitter social__item"></div>
+                        <div class="social__in social__item"></div>
+                    </div>
+                </div>
+                <div class="peoples__item person2">
+                    <img alt="person-2" src="assets/img/person2.png">
+                    <h2 class="person__name">Desmond Miles</h2>
+                    <p class="person__description">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.
+                    </p>
+                    <div class="social">
+                        <div class="social__facebook social__item"></div>
+                        <div class="social__gmail social__item"></div>
+                        <div class="social__twitter social__item"></div>
+                        <div class="social__in social__item"></div>
+                    </div>
+                </div>
+                <div class="peoples__item person3">
+                    <img alt="person-2" src="assets/img/person3.png">
+                    <h2 class="person__name">Scolara Visari</h2>
+                    <p class="person__description">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.
+                    </p>
+                    <div class="social">
+                        <div class="social__facebook social__item"></div>
+                        <div class="social__gmail social__item"></div>
+                        <div class="social__twitter social__item"></div>
+                        <div class="social__in social__item"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
