--- a/singolo1.html
+++ b/singolo1.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="singolo1.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
     <title>Singolo-1</title>
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="container-1">
             <div class="head-block">
                 <div class="logo">
                     <h1>SINGOLO<span>*</span></h1>
@@ -26,7 +25,7 @@
     </header>
     <main>
         <section class="slider">
-            <div class="container">
+            <div class="container-1">
                 <div class="slider-container">
                     <div class="arrow arrow-right">
                         <img src="assets/img/left-arrow.png" alt="arrow">
@@ -42,7 +41,7 @@
             </div>
         </section>
         <section class="services">
-            <div class="container">
+            <div class="container-1">
               <h2 class="title">Our Services</h2>
               <p class="description1">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis,
                 non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus
