--- a/index.html
+++ b/index.html
@@ -180,10 +180,12 @@
                  ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
             <div class="container-form">
                 <form name="form" method="get" action="#" class="form-item">
+                    
                     <input type="text" name="name" placeholder="Name (Required)" required class="form-item__items">
                     <input type="email" name="email" placeholder="Email (Required)" required class="form-item__items"> 
                     <input type="text" name="subject" placeholder="Subject" class="form-item__items">
-                    <textarea placeholder="Describe your project in detail..." class="form-item__items" disabled></textarea>
+                    <textarea placeholder="Describe your project in detail..." class="form-item__items" disabled ></textarea>
+                    <button >Submit</button>
                 </form>
                 <div class="contact">
                     <h3 class="contact__title">Contact Information</h3>
