--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
         <section class="services">
             <div class="container-1">
               <h2 class="title">Our Services</h2>
-              <p class="description1">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis,
-                non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus
-                commodo, tortor mauris condimentum nibh.</p>
+              <p class="description1">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
               <div class="layout">
                 <article class="service1">
                   <img class="icon" src="./assets/img/pen.png" alt="pen">
@@ -67,7 +65,7 @@
                 </article>
                 <article class="service1">
                   <img class="icon icon3" src="./assets/img/heart.png" alt="heart">
-                  <div class="content">
+                  <div class="content content1">
                     <h3 class="name">Love Is The Answer</h3>
                     <p class="description">Nulla sed nunc et toror luctus faucibus. Morbi at aliquet turpis, et
                       consequat felis. Quisque condimentum.</p>
@@ -84,14 +82,14 @@
                 <article class="service1">
                   <img class="icon icon2" src="./assets/img/bubble.png" alt="bubble">
                   <div class="content">
-                    <h3 class="name">24/7 Support</h3>
+                    <h3 class="name">24 / 7 Support</h3>
                     <p class="description">Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem
                       erat. Pellentesque egestas venenatis lorem.</p>
                   </div>
                 </article>
                 <article class="service1">
                   <img class="icon icon3" src="./assets/img/star.png" alt="star">
-                  <div class="content">
+                  <div class="content content1">
                     <h3 class="name">Feel Like A Star</h3>
                     <p class="description">Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce
                       vitae aliquam tellus.</p>
@@ -176,8 +174,7 @@
     <section class="form">
         <div class="container">
             <h2 class="form__title">Get a Quote</h2>
-            <p class="form__subtitle">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor
-                 ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+            <p class="form__subtitle">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
             <div class="container-form">
                 <form name="form" method="get" action="#" class="form-item">
                     
