--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
                     <h3 class="contact__title">Contact Information</h3>
                     <p class="contact__subtitle">Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis.</p>
                     <div class="contact-container">
-                        <a type="addres" href="#" class="contact-container__item"><i class="fa fa-map-marker" aria-hidden="true"></i>Elm St. 14/05 Lost City </a>
-                        <a type="tel" href="tel:803528 331 86 35" class="contact-container__item"><i class="fa fa-phone" aria-hidden="true"></i>03528 331 86 35 </a>
-                        <a type="mail" href="mailto:info@singolo.com" class="contact-container__item"><i class="fa fa-envelope" aria-hidden="true"></i>info@singolo.com </a>
+                        <a type="addres" href="#" class="contact-container__item"><div class="icons icons1"></div>Elm St. 14/05 Lost City </a>
+                        <a type="tel" href="tel:803528 331 86 35" class="contact-container__item"><div class="icons icons2"></div>03528 331 86 35 </a>
+                        <a type="mail" href="mailto:info@singolo.com" class="contact-container__item"><div class="icons icons3"></div>info@singolo.com </a>
                     </div>
                 </div>
             </div>
